se creo etiqueta para dar un estilo

--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
 <html lang="en">
   <head>
    <title>Nombre pestaña</title>
+   <link rel="stylesheet" href="estilo/style.css">
   </head>
   <body>
     <h1>Primer Proyecto  Git</h1>
+    <p id="et_estilo">etiqueta con estilo</p>
   </body>
 </html>
